# project-orders-service

./: .dockerignore  Dockerfile  README.md  alembic.ini  orders.db  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0dabec593fe3_add_users_table.py  b0e183aef7c4_create_orders_table.py
src/orders_service/api/: auth.py  dependencies.py  main.py  schemas.py
src/orders_service/api/routers/: orders.py
src/orders_service/application/: use_cases.py
src/orders_service/core/: security.py
src/orders_service/db/: database.py  init_db.py  models.py  seed_user.py
src/orders_service/domain/: entities.py  notification_port.py  repositories.py  user_entity.py
src/orders_service/infrastructure/: sql_repository.py  user_repository.py
tests/: conftest.py  test_auth.py  test_create_order_use_case.py  test_orders_api.py  test_sql_repository.py
