[project]
name = "orders-service"
version = "0.1.0"
description = "Hexagonal FastAPI service"
authors = [
    {name = "Daniel Belmonte"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{ include = "orders_service", from = "src" }]
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "ruff (>=0.15.13,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true